--- a/AA2324/course/02_math_recap_linear_algebra/02_math_recap_linear_algebra.ipynb
+++ b/AA2324/course/02_math_recap_linear_algebra/02_math_recap_linear_algebra.ipynb
@@ -2308,9 +2308,9 @@
     "# [NxN,NxN] -> NxNx2 # add 3-rd axis, like adding another layer\n",
     "src = np.stack((Xs,Ys), axis=2)\n",
     "# flatten first two dimension\n",
-    "# (NN)x2\n",
+    "# (NN)x2: current shape\n",
     "src_r = src.reshape(-1,src.shape[-1]) #ask reshape to keep last dimension and adjust the rest\n",
-    "# 2x2 @ 2x(NN)\n",
+    "# 2x2 @ 2x(NN): current shape\n",
     "dst = A @ src_r.T # 2xNN\n",
     "#(NN)x2 and then reshape as NxNx2\n",
     "dst = (dst.T).reshape(src.shape)\n",
