Third notebook typo

--- a/AA2324/course/02_math_recap_linear_algebra/02_math_recap_linear_algebra.ipynb
+++ b/AA2324/course/02_math_recap_linear_algebra/02_math_recap_linear_algebra.ipynb
@@ -2890,7 +2890,7 @@
     "# Hyperplanes\n",
     "\n",
     "**Hyperplane**: a generalization to higher dimensions of a line ($D=2$) or of a plane ($D=3$).\n",
-    "In an $d$-dimensional vector space, a hyperplane has $d-1$ dimensions and **divides the space into two half-spaces.**\n",
+    "In a $d$-dimensional vector space, a hyperplane has $d-1$ dimensions and **divides the space into two half-spaces.**\n",
     "\n",
     "$ \\mathbf{w}\\mathbf{x} + \\mathbf{b} = 0$ where $\\mathbf{w}$ is a vector normal to the hyperplane and $\\mathbf{b}$ is an offset\n",
     "\n",
