--- a/AA2324/course/02_math_recap_linear_algebra/02_math_recap_linear_algebra.ipynb
+++ b/AA2324/course/02_math_recap_linear_algebra/02_math_recap_linear_algebra.ipynb
@@ -322,16 +322,13 @@
    "source": [
     "## Direction in space\n",
     "\n",
-    "One of the benefits of this shift is that\n",
-    "We can make visual sense of the act of vector addition.\n",
-    "In particular, we follow the directions given by one vector,\n",
-    "and then follow the directions given by the other, as is seen below (rule of the parallelogram).\n",
+    "One of the benefits of this shift is that we can make visual sense of the act of vector addition. In particular, we follow the directions given by one vector, and then follow the directions given by the other, as is shown below (rule of the parallelogram).\n",
     "\n",
     "<img src=\"https://raw.githubusercontent.com/d2l-ai/d2l-en/master/img/vec-add.svg\" width=\"30%\">\n",
     "\n",
-    "Difference is just $\\mathbf{A}-\\mathbf{B}=\\mathbf{A}+(-\\mathbf{B})$\n",
+    "The difference is just $\\mathbf{A}-\\mathbf{B}=\\mathbf{A}+(-\\mathbf{B})$\n",
     "\n",
-    "<small>Taken from [d2l.ai]<small>"
+    "<small>Taken from [d2l.ai](https://d2l.ai)<small>"
    ]
   },
   {
