--- a/AA2324/course/02_math_recap_linear_algebra/02_math_recap_linear_algebra.ipynb
+++ b/AA2324/course/02_math_recap_linear_algebra/02_math_recap_linear_algebra.ipynb
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "hide_input": true,
     "scrolled": false,
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "cell_style": "center",
     "slideshow": {
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -459,7 +459,7 @@
        "True"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -583,7 +583,7 @@
        "array([3., 4., 5.])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 9,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -635,9 +635,18 @@
       "\n",
       "[[1 1 1]\n",
       " [1 1 1]\n",
-      " [1 1 1]]\n",
-      "True\n"
+      " [1 1 1]]\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -650,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -686,7 +695,7 @@
        "True"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -731,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -753,7 +762,7 @@
        "36"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -791,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -804,7 +813,7 @@
        "array([[3., 4., 5.]])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -858,7 +867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 36,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -866,12 +875,19 @@
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 0 3] 4\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
        "True"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -923,7 +939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -936,7 +952,7 @@
        "0.4189900840328574"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1005,7 +1021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -1020,7 +1036,7 @@
        "       [ 3,  0,  3, -3]])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1100,7 +1116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -1275,7 +1291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -1288,23 +1304,23 @@
      "text": [
       "A\n",
       "\n",
-      "[[0.21112507 0.88067203 0.3647133  0.87561737 0.662075  ]\n",
-      " [0.15904124 0.09035334 0.17331389 0.7048964  0.68319403]\n",
-      " [0.94204213 0.79577101 0.19197172 0.1532628  0.31938471]]\n",
+      "[[0.16124845 0.83232984 0.99257308 0.25222739 0.87050069]\n",
+      " [0.6434155  0.40057624 0.46045128 0.14040417 0.74791248]\n",
+      " [0.06536099 0.39571526 0.26926799 0.18454394 0.45232817]]\n",
       "\n",
       "B\n",
       "\n",
-      "[[0.64593499 0.86820765]\n",
-      " [0.62501391 0.0756355 ]\n",
-      " [0.8866072  0.03563402]\n",
-      " [0.19928793 0.58419981]\n",
-      " [0.02632619 0.33502494]]\n",
+      "[[0.24687283 0.73883169]\n",
+      " [0.12465653 0.65763608]\n",
+      " [0.4703444  0.22713629]\n",
+      " [0.59523477 0.44742166]\n",
+      " [0.24546113 0.10382742]]\n",
       "\n",
       "C\n",
       "\n",
-      "[[1.20209266 0.99625381]\n",
-      " [0.47132698 0.79177799]\n",
-      " [1.31502105 1.08145539]]\n"
+      "[[0.97422299 1.0951888 ]\n",
+      " [0.69250382 0.98386803]\n",
+      " [0.41298898 0.49922095]]\n"
      ]
     }
    ],
@@ -1483,7 +1499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -1496,7 +1512,7 @@
        "array([20, 23, 26, 29])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1511,37 +1527,6 @@
     "#  0*0\n",
     "#  4*1\n",
     "#  8*2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 0,  0,  0,  0],\n",
-       "       [ 4,  5,  6,  7],\n",
-       "       [16, 18, 20, 22]])"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "A = np.array([0, 1, 2]) #1x3   3x4\n",
-    "B = np.array([[ 0,  1,  2,  3],  # 0\n",
-    "              [ 4,  5,  6,  7],  # 1\n",
-    "              [ 8,  9, 10, 11]]) # 2\n",
-    "A[:, np.newaxis] * B # we wanna do this np.newaxis is broad cast and tells \n",
-    "                     # numpy to put A as col vector "
    ]
   },
   {
@@ -1567,8 +1552,12 @@
     }
    ],
    "source": [
-    "A[:, np.newaxis] * B # same as below\n",
-    "np.repeat(A.reshape(-1, 1), 4, axis=1)*B"
+    "A = np.array([0, 1, 2]) #1x3   3x4\n",
+    "B = np.array([[ 0,  1,  2,  3],  # 0\n",
+    "              [ 4,  5,  6,  7],  # 1\n",
+    "              [ 8,  9, 10, 11]]) # 2\n",
+    "A[:, np.newaxis] * B # we wanna do this np.newaxis is broad cast and tells \n",
+    "                     # numpy to put A as col vector "
    ]
   },
   {
@@ -1583,10 +1572,37 @@
     {
      "data": {
       "text/plain": [
-       "array([ 0, 22, 76])"
+       "array([[ 0,  0,  0,  0],\n",
+       "       [ 4,  5,  6,  7],\n",
+       "       [16, 18, 20, 22]])"
       ]
      },
      "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A[:, np.newaxis] * B # same as below\n",
+    "np.repeat(A.reshape(-1, 1), 4, axis=1)*B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0, 22, 76])"
+      ]
+     },
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1699,7 +1715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -1750,7 +1766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1763,7 +1779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1831,7 +1847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -1844,7 +1860,7 @@
        "(3, 3, 3, 3)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2056,7 +2072,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -2222,7 +2238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -2269,7 +2285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -2308,7 +2324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -2338,7 +2354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -2395,7 +2411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -2690,7 +2706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -2728,7 +2744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
