Added spaces and typo in code of `Matrix to Vector` section

--- a/AA2324/course/02_math_recap_linear_algebra/02_math_recap_linear_algebra.ipynb
+++ b/AA2324/course/02_math_recap_linear_algebra/02_math_recap_linear_algebra.ipynb
@@ -934,7 +934,7 @@
     "\n",
     "This is a nice result since nothing in the computation references two-dimensions.\n",
     "\n",
-    "**Indeed, we can use this in three or three million dimensions without issue.**"
+    "**Indeed, we can use this in three or three million dimensions without issues.**"
    ]
   },
   {
@@ -1087,7 +1087,7 @@
    },
    "source": [
     "### Two interpretations\n",
-    "1. Take each row of A, that is $\\mathbf{a}_r^T$, then do inner product with $\\mathbf{x}$\n",
+    "1. Take each row of $\\mathbf{A}$, that is $\\mathbf{a}_r^T$, then do inner product with $\\mathbf{x}$\n",
     "$$\n",
     "\\mathbf{b} = \n",
     "\\begin{bmatrix}\n",
@@ -1097,7 +1097,7 @@
     "\\end{bmatrix}\n",
     "$$\n",
     "\n",
-    "2. Take each value of $\\mathbf{x}$, scale each column of A; sum across cols (axis=1).\n",
+    "2. Take each value of $\\mathbf{x}$, scale each column of $\\mathbf{A}$; sum across cols (axis=1).\n",
     "\n"
    ]
   },
@@ -1170,10 +1170,10 @@
     "x = np.ones((9, 1))\n",
     "b = A @ x  # 3x9 @ 9x1 = 3x1\n",
     "bb = np.matmul(A, x)\n",
-    "bbb = np.dot(A,x)\n",
+    "bbb = np.dot(A, x)\n",
     "print('A', A, 'x', x, 'b', b, 'bb', bb,'bbb', bbb, sep='\\n\\n')\n",
     "\n",
-    "# Questions for you: A*B does elementwise multiplcation # will it work?"
+    "# Question for you: A * B does elementwise multiplcation. Will it work?"
    ]
   },
   {
