--- a/AA2324/course/02_math_recap_linear_algebra/02_math_recap_linear_algebra.ipynb
+++ b/AA2324/course/02_math_recap_linear_algebra/02_math_recap_linear_algebra.ipynb
@@ -1128,39 +1128,39 @@
       "\n",
       "x\n",
       "\n",
-      "[[1.]\n",
-      " [1.]\n",
-      " [1.]\n",
-      " [1.]\n",
-      " [1.]\n",
-      " [1.]\n",
-      " [1.]\n",
-      " [1.]\n",
-      " [1.]]\n",
+      "[[10]\n",
+      " [11]\n",
+      " [12]\n",
+      " [13]\n",
+      " [14]\n",
+      " [15]\n",
+      " [16]\n",
+      " [17]\n",
+      " [18]]\n",
       "\n",
       "b\n",
       "\n",
-      "[[ 36.]\n",
-      " [117.]\n",
-      " [198.]]\n",
+      "[[ 564]\n",
+      " [1698]\n",
+      " [2832]]\n",
       "\n",
       "bb\n",
       "\n",
-      "[[ 36.]\n",
-      " [117.]\n",
-      " [198.]]\n",
+      "[[ 564]\n",
+      " [1698]\n",
+      " [2832]]\n",
       "\n",
       "bbb\n",
       "\n",
-      "[[ 36.]\n",
-      " [117.]\n",
-      " [198.]]\n"
+      "[[ 564]\n",
+      " [1698]\n",
+      " [2832]]\n"
      ]
     }
    ],
    "source": [
     "A = np.arange(27).reshape(3, 9)\n",
-    "x = np.ones((9, 1))\n",
+    "x = np.arange(10, 19).reshape(9, 1) #np.ones((9, 1))\n",
     "b = A @ x  # 3x9 @ 9x1 = 3x1\n",
     "bb = np.matmul(A, x)\n",
     "bbb = np.dot(A, x)\n",
@@ -1285,7 +1285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -1298,23 +1298,23 @@
      "text": [
       "A\n",
       "\n",
-      "[[0.16124845 0.83232984 0.99257308 0.25222739 0.87050069]\n",
-      " [0.6434155  0.40057624 0.46045128 0.14040417 0.74791248]\n",
-      " [0.06536099 0.39571526 0.26926799 0.18454394 0.45232817]]\n",
+      "[[0.75324663 0.30684684 0.98379638 0.23921872 0.17192289]\n",
+      " [0.56090417 0.75092259 0.0694448  0.52064688 0.89749401]\n",
+      " [0.11611916 0.57890066 0.98144014 0.76873616 0.61193092]]\n",
       "\n",
       "B\n",
       "\n",
-      "[[0.24687283 0.73883169]\n",
-      " [0.12465653 0.65763608]\n",
-      " [0.4703444  0.22713629]\n",
-      " [0.59523477 0.44742166]\n",
-      " [0.24546113 0.10382742]]\n",
+      "[[0.19564739 0.55103819]\n",
+      " [0.11420494 0.53115825]\n",
+      " [0.04510001 0.6816929 ]\n",
+      " [0.42539052 0.38177558]\n",
+      " [0.50698574 0.2907808 ]]\n",
       "\n",
       "C\n",
       "\n",
-      "[[0.97422299 1.0951888 ]\n",
-      " [0.69250382 0.98386803]\n",
-      " [0.41298898 0.49922095]]\n"
+      "[[0.41570722 1.39001864]\n",
+      " [0.87512538 1.21502267]\n",
+      " [0.77034801 1.51193719]]\n"
      ]
     }
    ],
@@ -1493,7 +1493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -1525,7 +1525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -1556,7 +1556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -1583,7 +1583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -1709,7 +1709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -1760,7 +1760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1773,7 +1773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1841,7 +1841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -2066,7 +2066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -2232,7 +2232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -2279,7 +2279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -2318,7 +2318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -2348,7 +2348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -2405,7 +2405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -2700,7 +2700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -2738,7 +2738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
