--- a/AA2324/course/02_math_recap_linear_algebra/02_math_recap_linear_algebra.ipynb
+++ b/AA2324/course/02_math_recap_linear_algebra/02_math_recap_linear_algebra.ipynb
@@ -1109,7 +1109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 16,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -1128,39 +1128,39 @@
       "\n",
       "x\n",
       "\n",
-      "[[10]\n",
-      " [11]\n",
-      " [12]\n",
-      " [13]\n",
-      " [14]\n",
-      " [15]\n",
-      " [16]\n",
-      " [17]\n",
-      " [18]]\n",
+      "[[1.]\n",
+      " [1.]\n",
+      " [1.]\n",
+      " [1.]\n",
+      " [1.]\n",
+      " [1.]\n",
+      " [1.]\n",
+      " [1.]\n",
+      " [1.]]\n",
       "\n",
       "b\n",
       "\n",
-      "[[ 564]\n",
-      " [1698]\n",
-      " [2832]]\n",
+      "[[ 36.]\n",
+      " [117.]\n",
+      " [198.]]\n",
       "\n",
       "bb\n",
       "\n",
-      "[[ 564]\n",
-      " [1698]\n",
-      " [2832]]\n",
+      "[[ 36.]\n",
+      " [117.]\n",
+      " [198.]]\n",
       "\n",
       "bbb\n",
       "\n",
-      "[[ 564]\n",
-      " [1698]\n",
-      " [2832]]\n"
+      "[[ 36.]\n",
+      " [117.]\n",
+      " [198.]]\n"
      ]
     }
    ],
    "source": [
     "A = np.arange(27).reshape(3, 9)\n",
-    "x = np.arange(10, 19).reshape(9, 1) #np.ones((9, 1))\n",
+    "x = np.ones((9, 1))\n",
     "b = A @ x  # 3x9 @ 9x1 = 3x1\n",
     "bb = np.matmul(A, x)\n",
     "bbb = np.dot(A, x)\n",
@@ -1298,23 +1298,23 @@
      "text": [
       "A\n",
       "\n",
-      "[[0.75324663 0.30684684 0.98379638 0.23921872 0.17192289]\n",
-      " [0.56090417 0.75092259 0.0694448  0.52064688 0.89749401]\n",
-      " [0.11611916 0.57890066 0.98144014 0.76873616 0.61193092]]\n",
+      "[[0.5873734  0.81554178 0.99080374 0.50644789 0.91425246]\n",
+      " [0.80206918 0.71370228 0.24885227 0.63754601 0.20923785]\n",
+      " [0.61234252 0.53716878 0.11126535 0.79403178 0.50737782]]\n",
       "\n",
       "B\n",
       "\n",
-      "[[0.19564739 0.55103819]\n",
-      " [0.11420494 0.53115825]\n",
-      " [0.04510001 0.6816929 ]\n",
-      " [0.42539052 0.38177558]\n",
-      " [0.50698574 0.2907808 ]]\n",
+      "[[0.19047218 0.65030926]\n",
+      " [0.3424278  0.83311435]\n",
+      " [0.6460026  0.8215571 ]\n",
+      " [0.29644204 0.97079576]\n",
+      " [0.84031219 0.35197936]]\n",
       "\n",
       "C\n",
       "\n",
-      "[[0.41570722 1.39001864]\n",
-      " [0.87512538 1.21502267]\n",
-      " [0.77034801 1.51193719]]\n"
+      "[[1.94959419 2.68887123]\n",
+      " [0.92274313 2.01320934]\n",
+      " [1.03419361 1.88657507]]\n"
      ]
     }
    ],
