Typos in Matrix-Matrix and Einsums

--- a/AA2324/course/02_math_recap_linear_algebra/02_math_recap_linear_algebra.ipynb
+++ b/AA2324/course/02_math_recap_linear_algebra/02_math_recap_linear_algebra.ipynb
@@ -1285,7 +1285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 35,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -1298,23 +1298,23 @@
      "text": [
       "A\n",
       "\n",
-      "[[0.5873734  0.81554178 0.99080374 0.50644789 0.91425246]\n",
-      " [0.80206918 0.71370228 0.24885227 0.63754601 0.20923785]\n",
-      " [0.61234252 0.53716878 0.11126535 0.79403178 0.50737782]]\n",
+      "[[0.98422533 0.70802824 0.53695765 0.96712216 0.76295398]\n",
+      " [0.07089995 0.23654984 0.75105077 0.48450479 0.28650044]\n",
+      " [0.74534996 0.53799887 0.09746216 0.41983732 0.49162883]]\n",
       "\n",
       "B\n",
       "\n",
-      "[[0.19047218 0.65030926]\n",
-      " [0.3424278  0.83311435]\n",
-      " [0.6460026  0.8215571 ]\n",
-      " [0.29644204 0.97079576]\n",
-      " [0.84031219 0.35197936]]\n",
+      "[[0.02567813 0.50781811]\n",
+      " [0.76011804 0.24997161]\n",
+      " [0.70824139 0.81594408]\n",
+      " [0.47605521 0.45743769]\n",
+      " [0.75596641 0.13885785]]\n",
       "\n",
       "C\n",
       "\n",
-      "[[1.94959419 2.68887123]\n",
-      " [0.92274313 2.01320934]\n",
-      " [1.03419361 1.88657507]]\n"
+      "[[1.98092486 1.6632621 ]\n",
+      " [1.16078736 0.96936404]\n",
+      " [1.06862921 0.85282626]]\n"
      ]
     }
    ],
@@ -1373,11 +1373,11 @@
     "\n",
     "A is $i\\times k$ and B is $k \\times j$.\n",
     "\n",
-    "$$ (A\\cdot B)_{ij} = \\sum_{k=1}^K A_{ik}\\cdot B_{kj}$$\n",
+    "$$(A\\cdot B)_{ij} = \\sum_{k=1}^K A_{ik}\\cdot B_{kj}$$\n",
     "\n",
-    "Sums take space, so let's remove them using einsum becomes:\n",
+    "Sums take space, so let's remove them. By using einsums, the previous equation becomes:\n",
     "\n",
-    "$$ (A\\cdot B)_{ij} =  A_{ik}B_{kj}$$"
+    "$$(A\\cdot B)_{ij} =  A_{ik}B_{kj}$$"
    ]
   },
   {
@@ -1517,7 +1517,7 @@
     "B = np.array([[ 0,  1,  2,  3],\n",
     "              [ 4,  5,  6,  7],\n",
     "              [ 8,  9, 10, 11]])\n",
-    "A@B # we do NOT wanna do this\n",
+    "A @ B # We do NOT wanna do this\n",
     "#  0*0\n",
     "#  4*1\n",
     "#  8*2"
@@ -1550,8 +1550,8 @@
     "B = np.array([[ 0,  1,  2,  3],  # 0\n",
     "              [ 4,  5,  6,  7],  # 1\n",
     "              [ 8,  9, 10, 11]]) # 2\n",
-    "A[:, np.newaxis] * B # we wanna do this np.newaxis is broad cast and tells \n",
-    "                     # numpy to put A as col vector "
+    "A[:, np.newaxis] * B # We wanna do this! np.newaxis is broadcast and tells \n",
+    "                     # numpy to put A as a column vector "
    ]
   },
   {
@@ -1577,7 +1577,7 @@
     }
    ],
    "source": [
-    "A[:, np.newaxis] * B # same as below\n",
+    "A[:, np.newaxis] * B # Same as below\n",
     "np.repeat(A.reshape(-1, 1), 4, axis=1)*B"
    ]
   },
@@ -1602,7 +1602,7 @@
     }
    ],
    "source": [
-    "(A[:, np.newaxis] * B ).sum(axis=1)# ----> horizontal"
+    "(A[:, np.newaxis] * B).sum(axis=1) # ----> Horizontal"
    ]
   },
   {
