--- a/AA2324/course/02_math_recap_linear_algebra/02_math_recap_linear_algebra.ipynb
+++ b/AA2324/course/02_math_recap_linear_algebra/02_math_recap_linear_algebra.ipynb
@@ -1410,7 +1410,7 @@
     "### The computer science way\n",
     "\n",
     "- `matmul` takes as input two variables A, B of shape: $i\\times k$, $~~~~k \\times j$\n",
-    "- `matmul` returns as output a shape as ij"
+    "- `matmul` returns as output a shape as $ij$"
    ]
   },
   {
