`.gitignore` + 02_math_linalg

--- a/AA2324/course/02_math_recap_linear_algebra/02_math_recap_linear_algebra.ipynb
+++ b/AA2324/course/02_math_recap_linear_algebra/02_math_recap_linear_algebra.ipynb
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 207,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -201,10 +201,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 208,
    "metadata": {
     "hide_input": true,
-    "scrolled": false,
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -380,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 209,
    "metadata": {
     "cell_style": "center",
     "slideshow": {
@@ -446,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 210,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -459,7 +458,7 @@
        "True"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 210,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -472,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 211,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -541,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 212,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -570,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 213,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -583,7 +582,7 @@
        "array([3., 4., 5.])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 213,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -608,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 214,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -644,7 +643,7 @@
        "True"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 214,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -659,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 215,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -695,7 +694,7 @@
        "True"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 215,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -740,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 216,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -762,7 +761,7 @@
        "36"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 216,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -800,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 217,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -813,7 +812,7 @@
        "array([[3., 4., 5.]])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 217,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -867,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 218,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -880,7 +879,7 @@
        "True"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 218,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -932,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 219,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -945,7 +944,7 @@
        "0.4189900840328574"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 219,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1014,7 +1013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 220,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -1029,7 +1028,7 @@
        "       [ 3,  0,  3, -3]])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 220,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1109,7 +1108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 221,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -1285,7 +1284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 222,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -1298,23 +1297,23 @@
      "text": [
       "A\n",
       "\n",
-      "[[0.98422533 0.70802824 0.53695765 0.96712216 0.76295398]\n",
-      " [0.07089995 0.23654984 0.75105077 0.48450479 0.28650044]\n",
-      " [0.74534996 0.53799887 0.09746216 0.41983732 0.49162883]]\n",
+      "[[0.46730978 0.80974182 0.72498343 0.27776831 0.88190433]\n",
+      " [0.87275081 0.42728608 0.80426102 0.69501406 0.78449381]\n",
+      " [0.88947185 0.12576727 0.53647975 0.22751395 0.06930855]]\n",
       "\n",
       "B\n",
       "\n",
-      "[[0.02567813 0.50781811]\n",
-      " [0.76011804 0.24997161]\n",
-      " [0.70824139 0.81594408]\n",
-      " [0.47605521 0.45743769]\n",
-      " [0.75596641 0.13885785]]\n",
+      "[[0.06390692 0.02156196]\n",
+      " [0.3707881  0.81018592]\n",
+      " [0.30371013 0.2888986 ]\n",
+      " [0.6841702  0.21571397]\n",
+      " [0.60043232 0.60867168]]\n",
       "\n",
       "C\n",
       "\n",
-      "[[1.98092486 1.6632621 ]\n",
-      " [1.16078736 0.96936404]\n",
-      " [1.06862921 0.85282626]]\n"
+      "[[1.26985644 1.47227293]\n",
+      " [1.40501297 1.22477267]\n",
+      " [0.46368411 0.36732596]]\n"
      ]
     }
    ],
@@ -1462,6 +1461,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 223,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1.04877525 1.39590122]\n",
+      " [1.48369461 1.4892815 ]\n",
+      " [1.23289651 1.63514902]]\n",
+      "\n",
+      "[[1.04877525 1.39590122]\n",
+      " [1.48369461 1.4892815 ]\n",
+      " [1.23289651 1.63514902]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = np.random.rand(3, 5)\n",
+    "B = np.random.rand(5, 2)\n",
+    "\n",
+    "print(A @ B, np.einsum(\"ik,kj -> ij\", A, B), sep=2*\"\\n\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -1493,7 +1518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 224,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -1506,7 +1531,7 @@
        "array([20, 23, 26, 29])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 224,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1525,7 +1550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 225,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -1540,7 +1565,7 @@
        "       [16, 18, 20, 22]])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 225,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1556,7 +1581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 226,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -1571,7 +1596,7 @@
        "       [16, 18, 20, 22]])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 226,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1583,7 +1608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 227,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -1596,7 +1621,7 @@
        "array([ 0, 22, 76])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 227,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1709,7 +1734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 228,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -1743,8 +1768,9 @@
     "B = np.array([[0, 1, 0],\n",
     "              [1, 1, 0],\n",
     "              [1, 1, 1]])\n",
+    "\n",
     "C = np.einsum('ij,jk->ijk', A, B)\n",
-    "print(C, C.shape, sep='\\n')\n"
+    "print(C, C.shape, sep='\\n')"
    ]
   },
   {
@@ -1760,31 +1786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([3.64418696, 2.1301514 , 1.92145548])"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# C.sum(axis=1) # What happens if we do this?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 229,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1792,7 +1794,34 @@
    },
    "outputs": [],
    "source": [
-    "# np.einsum('ij,jk->ik', A, B)"
+    "# C.sum(axis=1) # What happens if we do this?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 231,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 2  3  1]\n",
+      " [ 4  6  2]\n",
+      " [10 15  5]]\n",
+      "[[ 2  3  1]\n",
+      " [ 4  6  2]\n",
+      " [10 15  5]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.einsum('ij,jk->ik', A, B))\n",
+    "print(A @ B)"
    ]
   },
   {
@@ -1852,7 +1881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 198,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -1865,7 +1894,7 @@
        "(3, 3, 3, 3)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 198,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1885,7 +1914,7 @@
    "source": [
     "# A final note on [computational] matrix order\n",
     "\n",
-    "$$ \\underbrace{A}_{m\\times n}~\\big(\\underbrace{B}_{n\\times p}~\\underbrace{C}_{p\\times q}\\big) \\doteq \\big(\\underbrace{A}_{m\\times n}~\\underbrace{B}_{n\\times p}\\big)~\\underbrace{C}_{p\\times q}  $$\n",
+    "$$ \\underbrace{A}_{m\\times n}~\\big(\\underbrace{B}_{n\\times p}~\\underbrace{C}_{p\\times q}\\big) \\doteq \\big(\\underbrace{A}_{m\\times n}~\\underbrace{B}_{n\\times p}\\big)~\\underbrace{C}_{p\\times q} $$\n",
     "\n",
     "Who thinks the computational time of this inside the machines is the same?"
    ]
@@ -2077,7 +2106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 199,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -2243,7 +2272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 200,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -2290,7 +2319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 201,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -2329,7 +2358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 202,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -2359,7 +2388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 203,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -2416,7 +2445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 204,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -2711,7 +2740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 205,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -2749,7 +2778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 206,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -2980,7 +3009,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.11.5"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
