--- a/AA2425/course/10_model_selection_crossvalid/10_model_selection_crossvalid.ipynb
+++ b/AA2425/course/10_model_selection_crossvalid/10_model_selection_crossvalid.ipynb
@@ -1324,7 +1324,7 @@
    "source": [
     "# OPIS for Course Evaluation\n",
     "\n",
-    "##  New OPIS Code: 4UZC1KQA\n",
+    "##  New OPIS Code: 2339RD05\n",
     "\n",
     "\n",
     "<u>The code and guide are in the google classroom! </u>\n",
